// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsPage should not render statistics because there is no filter 1`] = `null`;

exports[`StatsPage should render "Overview" statistics 1`] = `
<div
  class="full-width wrapper"
>
  <div
    class="filtersWrapper"
  >
    StatsFilters
  </div>
  <div
    class="statsWrapper"
  >
    <div>
      Stats Component: 
      support-performance-overview
    </div>
  </div>
</div>
`;

exports[`StatsPage should render "Revenue" statistics 1`] = `
<div
  class="full-width wrapper"
>
  <div
    class="filtersWrapper"
  >
    StatsFilters
  </div>
  <div
    class="statsWrapper"
  >
    <div>
      Stats Component: 
      revenue
    </div>
  </div>
</div>
`;

exports[`StatsPage should render "Satisfaction" statistics 1`] = `
<div
  class="full-width wrapper"
>
  <div
    class="filtersWrapper"
  >
    StatsFilters
  </div>
  <div
    class="statsWrapper"
  >
    <div>
      Stats Component: 
      satisfaction
    </div>
  </div>
</div>
`;

exports[`StatsPage should render NoMatch component when an unmatched path is accessed 1`] = `
<div
  class="full-width wrapper"
>
  <div
    class="d-flex flex-column justify-content-center align-items-center"
    style="height: 100%;"
  >
    <h1>
      <i
        class="material-icons"
      >
        search
      </i>
    </h1>
    <h1>
      Error! That page was not found :(
    </h1>
  </div>
</div>
`;

exports[`StatsPage should render paywall when on live agents page and the live agents feature is not available 1`] = `
<div>
  Paywall for feature: 
  users_live_statistics
</div>
`;

exports[`StatsPage should render paywall when on live overview page and the live overview feature is not available 1`] = `
<div>
  Paywall for feature: 
  overview_live_statistics
</div>
`;

exports[`StatsPage should render paywall when on revenue page and the revenue statistics feature is not available 1`] = `
<div>
  Paywall for feature: 
  revenue_statistics
</div>
`;

exports[`StatsPage should render paywall when on statistics page and the satisfaction surveys feature is not available 1`] = `
<div>
  Paywall for feature: 
  satisfaction_surveys
</div>
`;

exports[`StatsPage should restrict feature when on revenue statistics page and integrations are missing 1`] = `
<div
  class="col mt-2"
>
  <div
    class="alert error my-3"
  >
    <div
      class="content"
    >
      <span
        class="label"
      >
        Your e-commerce store needs to be connected to Gorgias to use this feature.
      </span>
      <div
        class="customActions"
      >
        <a
          class="actionLink"
          to="/app/settings/integrations/shopify/new"
        >
          Add one here
        </a>
      </div>
    </div>
  </div>
  <p>
    Assess how much sales your support team is influencing. Staff and reward your support team according to sales. Track and increase conversion, using Chat campaigns, for example.
  </p>
  <div
    class="carouselContainer"
  >
    <div
      class="slick-slider slick-initialized"
    >
      
      <div
        class="slick-list"
      >
        <div
          class="slick-track"
          style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
        >
          <div
            aria-hidden="false"
            class="slick-slide slick-active slick-current"
            data-index="0"
            style="outline: none; width: 0px;"
            tabindex="-1"
          >
            <div>
              <div
                class="carouselContent"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                <a
                  href="/static/private/js/assets/img/presentationals/revenue-presentation.png"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt="carousel content"
                    src="/static/private/js/assets/img/presentationals/revenue-presentation.png"
                  />
                </a>
              </div>
            </div>
          </div>
          <div
            aria-hidden="false"
            class="slick-slide slick-active slick-cloned"
            data-index="1"
            style="width: 0px;"
            tabindex="-1"
          >
            <div>
              <div
                class="carouselContent"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                <a
                  href="/static/private/js/assets/img/presentationals/revenue-presentation.png"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt="carousel content"
                    src="/static/private/js/assets/img/presentationals/revenue-presentation.png"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
</div>
`;
